syntax = "proto3";
package tessornetwork.fury.did;

// Options section
option go_package = "github.com/tessornetwork/fury/x/did/types";

// Import section
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "fury/did/identity.proto";

// Query defines the gRPC querier service.
service Query {
  // Queries a DidDocument by id.
  rpc Identity(QueryResolveIdentityRequest)
      returns (QueryResolveIdentityResponse) {
    option (google.api.http).get = "/fury/did/{ID}/identities";
  }

  rpc IdentityHistory(QueryResolveIdentityHistoryRequest)
      returns (QueryResolveIdentityHistoryResponse) {
    option (google.api.http).get =
        "/fury/did/{ID}/identities/history";
  }

}

message QueryResolveIdentityRequest { string ID = 1; }

message QueryResolveIdentityResponse { Identity identity = 1; }

message QueryResolveIdentityHistoryRequest { string ID = 1; }

message QueryResolveIdentityHistoryResponse {
  repeated Identity identities = 1;
}

